--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -176,7 +176,7 @@ header nav {
         justify-content: space-between;
         height: 90vh;
         overflow-y: scroll;
-        min-width: 25%;
+        width: 400px;
         border-radius: 0 0 10px 10px;
         position: fixed;
         top: 10vh;
@@ -191,7 +191,7 @@ header nav {
     }
 
     .reviewCart.activated {
-        left: 75%;
+        left: calc(100% - 400px);
     }
 
     .cartTop {
