--- a/styles/sass/partials/_modal.scss
+++ b/styles/sass/partials/_modal.scss
@@ -86,3 +86,39 @@
         transition: 0.4s;
         z-index: 1000;
 }
+
+.modalContainerAfterSubmit {
+    background-color: $white;
+    @include boxModel(450px, 500px, 1rem, none, 6px, none);
+    font-size: 0.8rem;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 5;
+    box-shadow: $boxShadow;
+    .closeModal {
+        width: 100%;
+        text-align: right;
+        font-size: 1.5rem;
+        color: darkgray;
+        transition: all 0.25s;
+        cursor: pointer;
+        &:hover {
+            color: $lightgreen;
+        }
+    }
+    .modalAfterSubmitText {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        p {
+            font-size: 1.5rem;
+            margin: 0 auto;
+            text-align: center;
+        }
+    }
+}
