--- a/styles/sass/partials/_modal.scss
+++ b/styles/sass/partials/_modal.scss
@@ -98,7 +98,7 @@
     transform: translateX(-50%) translateY(-50%);
     z-index: 5;
     box-shadow: $boxShadow;
-    .closeModal {
+    .closeModal2 {
         width: 100%;
         text-align: right;
         font-size: 1.5rem;
