--- a/styles/style.css
+++ b/styles/style.css
@@ -635,7 +635,7 @@ button:hover {
   z-index: 5;
   box-shadow: 0 0 15px rgba(189, 189, 189, 0.4);
 }
-.modalContainerAfterSubmit .closeModal {
+.modalContainerAfterSubmit .closeModal2 {
   width: 100%;
   text-align: right;
   font-size: 1.5rem;
@@ -643,7 +643,7 @@ button:hover {
   transition: all 0.25s;
   cursor: pointer;
 }
-.modalContainerAfterSubmit .closeModal:hover {
+.modalContainerAfterSubmit .closeModal2:hover {
   color: #5EA85E;
 }
 .modalContainerAfterSubmit .modalAfterSubmitText {
