updated mobile nav and shop product btn media queries, and cart final total styling

--- a/styles/sass/partials/_cart.scss
+++ b/styles/sass/partials/_cart.scss
@@ -166,7 +166,8 @@
 
 .finalTotal {
     padding-bottom: 2rem;
-    border-top: 1px solid lightgrey;
+    border-top: 1px solid $black;
+    font-weight: 700;
 }
 
 .checkoutBtn {
