updated popup modal media queries at 480px

--- a/styles/sass/partials/_modal.scss
+++ b/styles/sass/partials/_modal.scss
@@ -176,3 +176,14 @@
         }
     }
 
+@media (max-width: 480px) {
+
+    .modalContainer,
+    .modalContainerAfterSubmit {
+        width: 90%;
+        height: auto;
+    }
+}
+
+
+
