--- a/styles/style.css
+++ b/styles/style.css
@@ -1016,11 +1016,14 @@ button:hover {
   }
   .hamburger .bar, .hamburger:after, .hamburger:before {
     content: "";
-    display: block;
     width: 100%;
     height: 3px;
-    background-color: #1A2428;
+    padding: none;
+    border: none;
+    border-radius: none;
     margin: 6px 0px;
+    display: block;
+    background-color: #1A2428;
     transition: 0.4s;
   }
   .hamburger.activated:before {
@@ -1049,15 +1052,19 @@ button:hover {
     right: 0;
   }
   .mobileNav a {
-    display: block;
+    font-family: 0;
+    font-size: 1.5rem;
+    font-weight: 700;
     width: 70%;
-    text-align: center;
-    margin: 0 auto;
+    height: auto;
     padding: 2.75rem 2.5rem;
+    border: none;
+    border-radius: none;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
     text-transform: uppercase;
     color: #fff;
-    font-weight: 700;
-    font-size: 1.5rem;
     letter-spacing: 0.5rem;
     transition: all 0.25s;
   }
