updated media queries to 495px

--- a/styles/sass/partials/_cart.scss
+++ b/styles/sass/partials/_cart.scss
@@ -36,7 +36,8 @@
     height: auto;
 }
 
-.closeCart {
+.closeCart,
+.closeCartContact {
     font-size: 1.25rem;
     color: grey;
     padding: 0.25rem 0;
