retracted class name

--- a/styles/sass/partials/_cart.scss
+++ b/styles/sass/partials/_cart.scss
@@ -36,8 +36,7 @@
     height: auto;
 }
 
-.closeCart,
-.closeCartContact {
+.closeCart {
     font-size: 1.25rem;
     color: grey;
     padding: 0.25rem 0;
