--- a/styles/style.css
+++ b/styles/style.css
@@ -762,8 +762,7 @@ button:hover {
   height: auto;
 }
 
-.closeCart,
-.closeCartContact {
+.closeCart {
   font-size: 1.25rem;
   color: grey;
   padding: 0.25rem 0;
