updating price padding in shop containers

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -215,7 +215,7 @@ header {
                 height: 70px;
             }
             .price {
-                padding-bottom: 0.75rem;
+                padding: 1.25rem 0;
                 align-self: flex-end;
                 span {
                     text-decoration: line-through;
