rough styling just for visualizating for items rendered to cart

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -4,6 +4,7 @@
 @use "./partials/reuseableCode";
 @use "./partials/contact";
 @use "./partials/mediaQueries";
+@use "./partials/cart";
 
 //nagivation section//
 header nav {
@@ -145,7 +146,7 @@ header {
                     text-decoration: line-through;
                 }
             }
-            button {
+            .addToCartBtn {
                 position: absolute;
             }
         }
