--- a/styles/sass/partials/_cart.scss
+++ b/styles/sass/partials/_cart.scss
@@ -51,7 +51,7 @@
 
 .qtyContainer {
   display: flex;
-  width: 50%;
+  width: 100%;
   justify-content: space-around;
 }
 
@@ -63,5 +63,23 @@
   width: 30px;
   height: 30px;
   border-radius: 15px;
-  border: none;
+  border: 15px;
 }
+
+/*.totalItemsInCart {
+  position: relative;
+}
+
+.totalItems {
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  border: none;
+  border-radius: 15px;
+  background-color: green;
+  position: absolute;
+  top: -45px;
+  right: -5px;
+  color: white;
+}*/
