--- a/styles/sass/partials/_cart.scss
+++ b/styles/sass/partials/_cart.scss
@@ -1,6 +1,6 @@
 
 .cartApp {
-    width: 350px;
+    width: 375px;
     height: 100vh;
     background-color: white;
     position: fixed;
@@ -8,6 +8,7 @@
     right: -30%;
     z-index: 20;
     transition: 0.4s ease-in;
+    font-size: 0.9rem;
   }
 
   .cartApp.activated {
@@ -42,17 +43,48 @@
 .productInCartContainer {
   background-color: white;
   padding: 1rem;
+  display: flex;
+  border-top: 1px solid lightgray;
 }
 
 .productName {
   color: black;
-  border: 1px solid red;
+}
+
+.productInfoContainer {
+  padding-left: 1rem;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.productImage {
+  width: 30%;
+}
+
+.productTextContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.productBtnContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .qtyContainer {
   display: flex;
-  width: 100%;
-  justify-content: space-around;
+  width: 50%;
+}
+
+.productQty {
+  padding: 0 1rem;
+  width: 2rem;
+  display: flex;
+  justify-content: center;
 }
 
 .minusBtn,
@@ -64,6 +96,15 @@
   height: 30px;
   border-radius: 15px;
   border: 15px;
+}
+
+.trashIcon {
+  width: 50%;
+  text-align: right;
+}
+
+.productsInCart {
+  border-bottom: 1px solid lightgray;
 }
 
 /*.totalItemsInCart {
