--- a/styles/style.css
+++ b/styles/style.css
@@ -710,7 +710,7 @@ button:hover {
   }
 }
 .cartApp {
-  width: 350px;
+  width: 375px;
   height: 100vh;
   background-color: white;
   position: fixed;
@@ -718,6 +718,7 @@ button:hover {
   right: -30%;
   z-index: 20;
   transition: 0.4s ease-in;
+  font-size: 0.9rem;
 }
 
 .cartApp.activated {
@@ -752,17 +753,48 @@ button:hover {
 .productInCartContainer {
   background-color: white;
   padding: 1rem;
+  display: flex;
+  border-top: 1px solid lightgray;
 }
 
 .productName {
   color: black;
-  border: 1px solid red;
+}
+
+.productInfoContainer {
+  padding-left: 1rem;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.productImage {
+  width: 30%;
+}
+
+.productTextContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.productBtnContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .qtyContainer {
   display: flex;
-  width: 100%;
-  justify-content: space-around;
+  width: 50%;
+}
+
+.productQty {
+  padding: 0 1rem;
+  width: 2rem;
+  display: flex;
+  justify-content: center;
 }
 
 .minusBtn,
@@ -774,6 +806,15 @@ button:hover {
   height: 30px;
   border-radius: 15px;
   border: 15px;
+}
+
+.trashIcon {
+  width: 50%;
+  text-align: right;
+}
+
+.productsInCart {
+  border-bottom: 1px solid lightgray;
 }
 
 /*.totalItemsInCart {
