--- a/styles/sass/partials/_cart.scss
+++ b/styles/sass/partials/_cart.scss
@@ -44,7 +44,7 @@
   background-color: white;
   padding: 1rem;
   display: flex;
-  border-top: 1px solid lightgray;
+  border-top: 1px solid gray;
 }
 
 .productName {
@@ -107,7 +107,7 @@
   border-bottom: 1px solid lightgray;
 }
 
-/*.totalItemsInCart {
+.totalItemsInCart {
   position: relative;
 }
 
@@ -123,4 +123,4 @@
   top: -45px;
   right: -5px;
   color: white;
-}*/
+}
