--- a/styles/sass/partials/_cart.scss
+++ b/styles/sass/partials/_cart.scss
@@ -4,7 +4,7 @@
     height: 100vh;
     background-color: white;
     position: fixed;
-    top: 0vh;
+    top: 0;
     right: -30%;
     z-index: 20;
     transition: 0.4s ease-in;
@@ -34,6 +34,11 @@
 
 .overlay.activated {
   display: block;
+}
+
+.emptyCart {
+  display: flex;
+  flex-direction: column;
 }
 
 .fullCart {
