--- a/styles/style.css
+++ b/styles/style.css
@@ -714,7 +714,7 @@ button:hover {
   height: 100vh;
   background-color: white;
   position: fixed;
-  top: 0vh;
+  top: 0;
   right: -30%;
   z-index: 20;
   transition: 0.4s ease-in;
@@ -744,6 +744,11 @@ button:hover {
 
 .overlay.activated {
   display: block;
+}
+
+.emptyCart {
+  display: flex;
+  flex-direction: column;
 }
 
 .fullCart {
