--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -9,7 +9,9 @@
 //nagivation section//
 header nav {
     height: 10vh;
-    position: relative;
+    position: fixed;
+    width: 100%;
+    z-index: 20;
     @include colors($white, 0, 0 0 8px rgba(0, 0, 0, 0.25));
     .wrapper ul {
         text-transform: uppercase;
@@ -60,7 +62,7 @@ header {
     height: 100vh;
     overflow: hidden;
     .hero {
-        height: 90vh;
+        height: 100vh;
         .textContainer {
             width: 50%;
             padding-right: 2rem;
