--- a/styles/style.css
+++ b/styles/style.css
@@ -711,14 +711,17 @@ button:hover {
 }
 .cartApp {
   width: 375px;
-  height: 100vh;
+  height: 90vh;
   background-color: white;
   position: fixed;
-  top: 0;
+  overflow-y: scroll;
+  top: 10vh;
   right: -30%;
   z-index: 20;
   transition: 0.4s ease-in;
   font-size: 0.9rem;
+  padding: 0 1rem 1rem 1rem;
+  border: 2px solid #5EA85E;
 }
 
 .cartApp.activated {
@@ -748,18 +751,78 @@ button:hover {
 
 .emptyCart {
   display: flex;
+  height: 90vh;
   flex-direction: column;
+  align-items: center;
+}
+.emptyCart p {
+  padding: 1rem 0;
+}
+.emptyCart a {
+  background-color: #5EA85E;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 0.15rem;
+  padding: 1rem;
+  transform: background-color 0.5s;
+  cursor: pointer;
+}
+.emptyCart a:hover {
+  background-color: #1A2428;
 }
 
 .fullCart {
   display: none;
+}
+.fullCart .yourCart {
+  background-color: #EAEAEA;
+  padding: 1rem;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.15rem;
+}
+.fullCart .clearTheCart {
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  margin: 0.5rem 0;
+  color: #5EA85E;
+  text-decoration: underline;
+  cursor: pointer;
+  text-align: right;
+}
+.fullCart .checkoutContainer {
+  width: calc(375px - 2rem);
+}
+.fullCart .checkoutContainer p {
+  padding: 1rem 0;
+  text-align: right;
+  font-weight: 500;
+}
+.fullCart .checkoutContainer .checkoutBtn {
+  all: revert;
+  background-color: #5EA85E;
+  color: #fff;
+  border: none;
+  width: 100%;
+  padding: 1rem 0;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
+  letter-spacing: 0.15rem;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.fullCart .checkoutContainer .checkoutBtn:hover {
+  background-color: #1A2428;
 }
 
 .productInCartContainer {
   background-color: white;
   padding: 1rem;
   display: flex;
-  border-top: 1px solid gray;
+  border: 1px solid #EAEAEA;
+  border-radius: 6px;
+  margin-bottom: 0.5rem;
 }
 
 .productName {
@@ -799,6 +862,7 @@ button:hover {
   padding: 0 1rem;
   width: 2rem;
   display: flex;
+  font-size: 0.8rem;
   justify-content: center;
 }
 
@@ -807,8 +871,8 @@ button:hover {
   all: revert;
   background-color: black;
   color: white;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   border-radius: 15px;
   border: 15px;
 }
@@ -820,6 +884,7 @@ button:hover {
 
 .productsInCart {
   border-bottom: 1px solid lightgray;
+  padding-bottom: 1rem;
 }
 
 .totalItemsInCart {
@@ -833,7 +898,7 @@ button:hover {
   justify-content: center;
   border: none;
   border-radius: 15px;
-  background-color: green;
+  background-color: #5EA85E;
   position: absolute;
   top: -45px;
   right: -5px;
@@ -842,7 +907,9 @@ button:hover {
 
 header nav {
   height: 10vh;
-  position: relative;
+  position: fixed;
+  width: 100%;
+  z-index: 20;
   background-color: #fff;
   color: 0;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
@@ -896,7 +963,7 @@ header {
   overflow: hidden;
 }
 header .hero {
-  height: 90vh;
+  height: 100vh;
 }
 header .hero .textContainer {
   width: 50%;
