--- a/styles/sass/partials/_cart.scss
+++ b/styles/sass/partials/_cart.scss
@@ -13,7 +13,7 @@
     transition: 0.4s ease-in;
     font-size: 0.9rem;
     padding: 0 1rem 1rem 1rem;
-    border: 2px solid $lightgreen;
+    border-top: 2px solid $lightgreen;
   }
 
   .cartApp.activated {
@@ -23,6 +23,8 @@
   .closeCart {
     font-size: 25px;
     cursor: pointer;
+    padding: 0.5rem 0;
+    color: rgb(157, 157, 157);
   }
 
 .overlay {
@@ -54,7 +56,9 @@
     color: $white;
     text-transform: uppercase;
     letter-spacing: 0.15rem;
-    padding: 1rem;
+    padding: 1rem 0;
+    width: 100%;
+    text-align: center;
     transform: background-color 0.5s;
     cursor: pointer;
     &:hover {
@@ -71,6 +75,7 @@
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.15rem;
+    margin-bottom: 0.5rem;
   }
   .clearTheCart {
     text-transform: uppercase;
@@ -83,6 +88,7 @@
   }
   .checkoutContainer {
     width: calc(375px - 2rem);
+    border-top: 1px solid $lightgrey;
     p {
       padding: 1rem 0;
       text-align: right;
@@ -147,7 +153,7 @@
 
 .qtyContainer {
   display: flex;
-  width: 50%;
+  width: 45%;
 }
 
 .productQty {
@@ -161,22 +167,24 @@
 .minusBtn,
 .plusBtn {
   all: revert;
-  background-color: black;
+  background-color: $lightgreen;
   color: white;
   width: 25px;
   height: 25px;
   border-radius: 15px;
   border: 15px;
+  transition: all 0.5s;
+  &:hover {
+    background-color: $black;
+  }
 }
 
-.trashIcon {
+.trashItem {
   width: 50%;
   text-align: right;
-}
-
-.productsInCart {
-  border-bottom: 1px solid lightgray;
-  padding-bottom: 1rem;
+  font-size: 0.8rem;
+  color: $black;
+  cursor: pointer;
 }
 
 .totalItemsInCart {
